cmake_minimum_required(VERSION 3.16)
project(accelerated)

set(CMAKE_CXX_STANDARD 14)

add_executable(hello hello.cpp)
add_executable(score score.cpp)
add_executable(score2 score2.cpp)
add_executable(warpGreeting warpGreeting.cpp)
add_executable(warpGreeting2 warpGreeting2.cpp)
add_executable(maxMinString maxMinString.cpp)
add_executable(countString countString.cpp)
add_executable(score3 score3.cpp)
add_executable(score4 score4.cpp)
add_executable(score5 score5.cpp)
add_executable(score6 score6.cpp)
add_executable(score7 score7.cpp)
add_executable(score8 score8.cpp)
add_executable(split split.cpp)
add_executable(split2 split2.cpp)
add_executable(split3 split3.cpp)
add_executable(square square.cpp)
add_executable(crossReference crossReference.cpp)
add_executable(countWord countWord.cpp)
add_executable(countWord2 countWord2.cpp)
add_executable(averageDouble averageDouble.cpp)
add_executable(palindrome palindrome.cpp)
add_executable(testVector testVector.cpp)
add_executable(testString testString.cpp)
add_executable(testAlgorithm testAlgorithm.cpp)
add_executable(testAlgorithm2 testAlgorithm2.cpp)
add_executable(practice1 testC/main.c testC/solution.h testC/solution.c)