cmake_minimum_required(VERSION 3.16)
project(accelerated)

set(CMAKE_CXX_STANDARD 14)

add_executable(hello hello.cpp)
add_executable(warpGreeting warpGreeting.cpp)
add_executable(warpGreeting2 warpGreeting2.cpp)
add_executable(maxMinString maxMinString.cpp)
add_executable(countString countString.cpp)
add_executable(score score.cpp)
add_executable(score2 score2.cpp)
add_executable(score3 score3.cpp)
add_executable(score4 score4.cpp)
add_executable(score5 score5.cpp)
add_executable(score6 score6.cpp)
add_executable(score7 score7.cpp)
add_executable(score8 score8.cpp)
add_executable(score9_1 score9_1.cpp)
add_executable(score9 score9.cpp)
add_executable(score10 score10/main.cpp score10/student_info.cpp score10/average.cpp score10/grade.cpp score10/median.cpp score10/score.dat)
add_executable(score11 score11/main.cpp score11/student_info.cpp score11/average.cpp score11/grade.cpp score11/median.cpp score11/score.dat)
add_executable(split split.cpp)
add_executable(split2 split2.cpp)
add_executable(split1 split3.cpp)
add_executable(square square.cpp)
add_executable(crossReference crossReference.cpp)
add_executable(countWord countWord.cpp)
add_executable(countWord2 countWord2.cpp)
add_executable(averageDouble averageDouble.cpp)
add_executable(palindrome palindrome.cpp)
add_executable(testVector testVector.cpp)
add_executable(testString testString.cpp)
add_executable(testAlgorithm testAlgorithm.cpp)
add_executable(testAlgorithm2 testAlgorithm2.cpp)
add_executable(median.cpp median.cpp)
add_executable(find.cpp find.cpp)
add_executable(practice1 testC/main.c testC/solution.h testC/solution.c)
add_executable(practice8-2 practice8-2/main.cpp practice8-2/algorithm.cpp practice8-2/algorithm.h)
add_executable(main_split split1/main.cpp split1/split.h split1/split.cpp)
add_executable(Vec vec/main.cpp)